--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="format-detection" content="telephone=no">
-    <title>dđ</title>
+    <title>有限会社K.D.S</title>
     <!-- Keywords & Description -->
     <meta name="keywords" content="">
     <meta name="description" content="">
