--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="description" content="">
     <!-- End keywords & Description -->
     <!-- Favicon -->
-    <link rel="shortcut icon" href="fav-ico.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="img/fav-ico.png" type="image/x-icon" />
     <!-- End favicon -->
     <!-- Css reset -->
     <link rel="stylesheet" type="text/css" href="./css/nomalize.css">
