--- a/index.html
+++ b/index.html
@@ -15,19 +15,28 @@
     <!-- End favicon -->
     <!-- Css reset -->
     <link rel="stylesheet" type="text/css" href="./css/nomalize.css">
-    <link rel="stylesheet" type="text/css" href="./css/library.css">
-    <link rel="stylesheet" type="text/css" href="./css/slick-theme.css">
-    <link rel="stylesheet" type="text/css" href="./css/slick.css">
-    <link rel="stylesheet" type="text/css" href="./css/aos.css">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
-    <link rel="stylesheet" type="text/css" href="./css/reponsive.css">
     <!-- End css reset -->
     
 </head>
 <body>
     <!-- Header -->
     <header>
-        
+        <div class="header dflex-jcsb">
+            <div class="header__logo dflex">
+                <div><img src="img/img_01.jpg" alt="Kawamura Duplex System"></div>
+                <div class="logo"><h1><a href="./"><img src="img/logo.svg" alt="" width="220"></a></h1></div>
+            </div>
+            <div class="header__menu">
+                <ul class="dflex">
+                    <li><a href="./" class="hv-o">TOP</a></li>
+                    <li><a href="#" class="hv-o">事業案内</a></li>
+                    <li><a href="#" class="hv-o">会社案内</a></li>
+                    <li><a href="#" class="hv-o">採用情報</a></li>
+                    <li><a href="#" class="hv-o">先輩メッセージ</a></li>
+                </ul>
+            </div>
+        </div>
     </header>
     <!-- End header -->
     <!-- Content -->
@@ -46,8 +55,6 @@
 
     <!-- Jquery pagetop -->
     <script src="./js/jquery-2.0.0b1.js"></script>
-    <script src="./js/aos.js"></script>
-    <script src="./js/slick.js"></script>
     <script src="./js/script.js"></script>
     <script src="./js/check_browser.js"></script>
 </body>
