--- a/index.html
+++ b/index.html
@@ -6,39 +6,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="format-detection" content="telephone=no">
     <title>有限会社K.D.S</title>
-    <!-- Keywords & Description -->
-    <meta name="keywords" content="">
-    <meta name="description" content="">
-    <!-- End keywords & Description -->
-    <!-- Favicon -->
     <link rel="shortcut icon" href="img/fav-ico.png" type="image/x-icon" />
-    <!-- End favicon -->
-    <!-- Css reset -->
     <link rel="stylesheet" type="text/css" href="./css/nomalize.css">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
-    <!-- End css reset -->
-    
 </head>
 <body>
-    <!-- Header -->
     <header>
-        <div class="header dflex-jcsb">
-            <div class="header__logo dflex">
-                <div><img src="img/img_01.jpg" alt="Kawamura Duplex System"></div>
-                <div class="logo"><h1><a href="./"><img src="img/logo.svg" alt="" width="220"></a></h1></div>
-            </div>
-            <div class="header__menu">
-                <ul class="dflex">
-                    <li><a href="./" class="hv-o">TOP</a></li>
-                    <li><a href="#" class="hv-o">事業案内</a></li>
-                    <li><a href="#" class="hv-o">会社案内</a></li>
-                    <li><a href="#" class="hv-o">採用情報</a></li>
-                    <li><a href="#" class="hv-o">先輩メッセージ</a></li>
-                </ul>
-            </div>
-        </div>
-    </header>
-    <!-- End header -->
+        <div class="header">
+            <div class="header__left">
+                <h1 class="header__logo">
+                    <a href="#" class="hv-o header__logo-kawamura">
+                        <img src="img/img_01.jpg" alt="Kawamura Duplex System" width="191">
+                    </a>
+
+                    <a href="#" class="hv-o header__logo-kds">
+                        <img src="img/logo.svg" alt="有限会社 K.D.S" width="220">
+                    </a>
+                </h1> <!-- /.header__logo -->
+            </div> <!-- /.header__left -->
+
+            <div class="header__right">
+                <div class="header__menu header__menu-before">
+                    <ul class="header__menu-list">
+                        <li><a href="#" class="active">TOP</a></li>
+                        <li><a href="#">事業案内</a></li>
+                        <li><a href="#">会社案内</a></li>
+                        <li><a href="#">採用情報</a></li>
+                        <li><a href="#">先輩メッセージ</a></li>
+                    </ul>
+                    
+                    <a href="contact.html" class="header__menu-contact">
+                        <span class="header__menu-contact--img">
+                            <img src="img/icon_email.svg" width="37" alt="お問い合わせ">
+                        </span>
+                        <span class="header__menu-contact--txt">お問い合わせ</span>
+                    </a> 
+                </div> <!-- /.header__menu -->
+            </div> <!-- /.header__right -->
+        </div> <!-- /.header -->
+    </header> <!-- / header -->
+
     <!-- Content -->
     <main>
         <section>
@@ -48,7 +55,10 @@
 
     <!-- Footer -->
     <footer>
-
+        <div class="footer">
+            <div class="footer__01"></div>
+            <div class="footer__02"></div>
+        </div>
     </footer>
 
     <!-- End footer -->
