--- a/privacy.html
+++ b/privacy.html
@@ -26,7 +26,7 @@
             </div> <!-- /.header__left -->
 
             <div class="header__right">
-                <div class="header__menu header__menu-before">
+                <div class="header__menu">
                     <ul class="header__menu-list">
                         <li><a href="#" class="active">TOP</a></li>
                         <li><a href="#">事業案内</a></li>
@@ -47,7 +47,45 @@
     </header> <!-- / header -->
 
     <main>
-      
+        <div class="banner__box">
+            <div class="banner__box-image" style="background-image: url(img/banner__page-privacy.jpg);"></div>
+            <div class="banner__box-title">
+                <div class="grid-1200">
+                    <h2>
+                        <span class="banner__box-title--ja">プライバシーポリシー</span>
+                        <span class="banner__box-title--en">PrivacyPolicy</span>
+                    </h2>
+                </div>
+            </div>
+        </div> <!-- /.banner__box -->
+
+        <div class="wrap__policy">
+            <div class="grid-1200">
+                <div class="general__title">
+                    <h3>
+                        <span class="general__title-ja">新着情報一覧</span>
+                        <span class="general__title-en">News List</span>
+                    </h3>
+                </div>
+
+                <div class="policy__box">
+                    <h4 class="policy__box-title">1．個人情報の定義</h4>
+                    <p>個人情報とは、個人に関する情報であり、氏名・生年月日・住所をはじめ電話番号・メールアドレスなど、個人が識別できるものをいいます。<br>また、組み合わせることによって個人が識別できる情報も個人情報として取り扱います。</p>
+                    <h4 class="policy__box-title">2．個人情報を収集する目的</h4>
+                    <p>当社のサービスに関する個人情報使用目的は下記となります。<br>・サービスに関する連絡および通知<br>・当社からの情報提供(広告を含む)<br>・お客様のご意見やご感想の回答のお願い</p>
+                    <h4 class="policy__box-title">3．個人情報の利用・提供</h4>
+                    <p>個人情報は前述の目的の範囲内で利用いたします。<br>また、原則外部の第三者に個人情報を提供することはありませんが、その場合も本人の了解を得た上で行います。<br>サイトからご登録いただきました個人情報の開示・訂正・削除につきましては、<a href="tel:0525034933">052-503-4933</a>までお申し出ください。<br>また、その他の情報の開示・訂正・削除を希望される場合は、後述の連絡先までご連絡ください。折り返し開示・訂正・削除手続きについてご案内します。<br>なお、ご本人であることの確認が十分に取れない場合、あるいは当社の業務に支障がある場合には、ご要望にお応えできない場合もございますので、あらかじめご了承下さい。</p>
+                    <h4 class="policy__box-title">4．外部委託</h4>
+                    <p>個人情報の処理を外部に委託する際に、個人情報を預託する場合があります。<br>委託処理を行う場合には、十分な個人情報保護水準を確保していることを条件として委託先を選定し、機密保持契約を結んだ上で行います。</p>
+                    <h4 class="policy__box-title">5．個人情報の管理</h4>
+                    <p>個人情報への不当なアクセスまたは個人情報の紛失、破壊、改竄、漏洩などの危険に対して、技術面及び組織面において必要な安全対策を継続的に講じるよう努めています。</p>
+                    <div class="policy__box-item">
+                        <h4 class="policy__box-title">当社の個人情報取扱についてのご相談は下記までお問い合わせください。</h4>
+                        <p>有限会社ケーディーエス<br>〒452-0822　愛知県名古屋市西区中小田井三丁目369番地1<br><a href="tel:0525034933">TEL:052-503-4933</a>　FAX:052-503-4934<br>個人情報保護責任者 宛</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer>
