--- a/privacy.html
+++ b/privacy.html
@@ -66,7 +66,7 @@
                         <span class="general__title-ja">新着情報一覧</span>
                         <span class="general__title-en">News List</span>
                     </h3>
-                </div>
+                </div> <!-- /.general__title -->
 
                 <div class="policy__box">
                     <h4 class="policy__box-title">1．個人情報の定義</h4>
@@ -83,7 +83,7 @@
                         <h4 class="policy__box-title">当社の個人情報取扱についてのご相談は下記までお問い合わせください。</h4>
                         <p>有限会社ケーディーエス<br>〒452-0822　愛知県名古屋市西区中小田井三丁目369番地1<br><a href="tel:0525034933">TEL:052-503-4933</a>　FAX:052-503-4934<br>個人情報保護責任者 宛</p>
                     </div>
-                </div>
+                </div> <!-- /.policy__box -->
             </div>
         </div>
     </main>
