--- a/privacy.html
+++ b/privacy.html
@@ -85,7 +85,7 @@
                     </div>
                 </div> <!-- /.policy__box  -->
             </div>
-        </div>
+        </div> <!-- /.wrap__policy -->
     </main>
 
     <footer>
